After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761396 - PDF or Tiff import makes Glom crash
PDF or Tiff import makes Glom crash
Status: RESOLVED FIXED
Product: glom
Classification: Other
Component: data mode
1.28.x
Other Linux
: Normal normal
: ---
Assigned To: Murray Cumming
Murray Cumming
: 761397 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-02-01 11:55 UTC by m.rick.mac
Modified: 2016-02-25 13:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Tiff file 1 making Glom crashing (2.53 MB, image/tiff)
2016-02-15 19:59 UTC, m.rick.mac
Details

Description m.rick.mac 2016-02-01 11:55:09 UTC
When importing a Tiff picture inside Glom, the application will crash.
Happens on both Linux and Mac OS.

EvinceView:ERROR:/build/buildd/evince-3.14.2/./libview/ev-view.c:6877:ev_view_parent_set: assertion failed: (!parent || GTK_IS_SCROLLED_WINDOW (parent))

Xubuntu 15.04
Comment 1 Murray Cumming 2016-02-05 13:58:25 UTC
Can you open the TIFF file in evince? For instance, like so on the command line:

$ evince something.tiff
Comment 2 m.rick.mac 2016-02-05 21:55:16 UTC
Yes even directly with the GUI.
Comment 3 Murray Cumming 2016-02-06 21:08:42 UTC
Maybe the libview is from a different version of evince than you are using in the GUI.

Can you run the "make check" tests?

Also, are you able to get a stacktrace at that point. For instance, by doing "break g_log" in gdb? You might need to "continue" past earlier warnings to get there.
Comment 4 Murray Cumming 2016-02-06 21:09:58 UTC
Also, can you upload the particular TIFF image here? It works for me on Ubuntu with the 1.28 PPA package.
Comment 5 m.rick.mac 2016-02-15 19:56:36 UTC
Both of them makes Glom crashing in both Linux and Mac OS.
I tried with several others with same results.
Comment 6 m.rick.mac 2016-02-15 19:59:42 UTC
Created attachment 321308 [details]
Tiff file 1 making Glom crashing
Comment 7 m.rick.mac 2016-02-15 20:03:40 UTC
https://www.dropbox.com/s/ktxf2a2qwt6k4kq/Ole%20No%20Moire.tif?dl=0
Tiff file 2 making Glom crashing
Comment 8 Murray Cumming 2016-02-24 20:37:06 UTC
(In reply to m.rick.mac from comment #6)
> Created attachment 321308 [details]
> Tiff file 1 making Glom crashing

Confirmed. I get a crash too.

Valgrind doesn't report a problem. But there is a failed assertion in EvinceView:

  • #0 __GI_raise
    at ../sysdeps/unix/sysv/linux/raise.c line 55
  • #1 __GI_abort
    at abort.c line 89
  • #2 g_assertion_message
  • #3 g_assertion_message_expr
  • #4 ev_view_parent_set
    at ev-view.c line 7307
  • #5 g_cclosure_marshal_VOID__OBJECTv
    at gmarshal.c line 2102
  • #6 g_type_class_meta_marshalv
    at gclosure.c line 1024
  • #7 _g_closure_invoke_va
    at gclosure.c line 867
  • #8 g_signal_emit_valist
    at gsignal.c line 3294
  • #9 g_signal_emit
    at gsignal.c line 3441
  • #10 gtk_widget_set_parent
    at gtkwidget.c line 9523
  • #11 gtk_bin_add
    at gtkbin.c line 135
  • #12 Gtk::Container_Class::add_callback
    at container.cc line 614
  • #13 g_cclosure_marshal_VOID__OBJECTv
  • #14 g_type_class_meta_marshalv
    at gclosure.c line 1024
  • #15 _g_closure_invoke_va
    at gclosure.c line 867
  • #16 g_signal_emit_valist
    at gsignal.c line 3294
  • #17 g_signal_emit
    at gsignal.c line 3441
  • #18 gtk_container_add
    at gtkcontainer.c line 1874
  • #19 Glom::ImageGlom::show_image_data
    at glom/utility_widgets/imageglom.cc line 351
  • #20 Glom::ImageGlom::on_menupopup_activate_select_file
    at glom/utility_widgets/imageglom.cc line 794
  • #21 Glom::ImageGlom::on_button_press_event
    at glom/utility_widgets/imageglom.cc line 156
  • #22 Gtk::Widget_Class::button_press_event_callback
    at widget.cc line 4231
  • #23 _gtk_marshal_BOOLEAN__BOXEDv
  • #24 g_type_class_meta_marshalv
    at gclosure.c line 1024
  • #25 _g_closure_invoke_va
    at gclosure.c line 867
  • #26 g_signal_emit_valist
    at gsignal.c line 3294
  • #27 g_signal_emit
    at gsignal.c line 3441
  • #28 gtk_widget_event_internal
    at gtkwidget.c line 7706
  • #29 gtk_widget_event
    at gtkwidget.c line 7266
  • #30 propagate_event_up
    at gtkmain.c line 2522
  • #31 propagate_event
    at gtkmain.c line 2624
  • #32 gtk_propagate_event
    at gtkmain.c line 2659
  • #33 gtk_main_do_event
    at gtkmain.c line 1855
  • #34 _gdk_event_emit
    at gdkevents.c line 73
  • #35 gdk_event_source_dispatch
    at gdkeventsource.c line 369
  • #36 g_main_dispatch
    at gmain.c line 3154
  • #37 g_main_context_dispatch
    at gmain.c line 3769
  • #38 g_main_context_iterate
    at gmain.c line 3840
  • #39 g_main_context_iteration
    at gmain.c line 3901
  • #40 g_application_run
    at gapplication.c line 2381
  • #41 Gio::Application::run
    at application.cc line 1203
  • #42 Gtk::Application::run
    at application.cc line 137
  • #43 main
    at glom/main.cc line 546

Comment 9 Murray Cumming 2016-02-24 20:41:04 UTC
*** Bug 761397 has been marked as a duplicate of this bug. ***
Comment 10 Murray Cumming 2016-02-24 20:42:06 UTC
I get the same problem with a PDF, so I think it's a general problem with the use of Evince's EvinceView. It certainly used to work fairly recently.
Comment 11 m.rick.mac 2016-02-24 20:49:12 UTC
You can test with an SVG from Open Clipart if you want it. I did the test from one of them.
But it's not a Glom related bug so?
Comment 12 Murray Cumming 2016-02-24 20:53:29 UTC
This seems to be the change in EvinceView that causes this:
https://git.gnome.org/browse/evince/commit/?id=6288e4889ed859cfca90e18912270df0b47ffebf

I will work around that by adding an intermediate GtkScrolledWindow.

However, causing a library to crash the application like that is rather obnoxious. I'm CCing Carlos in case he doesn't realize that it's not just Evince that is affected by this. a g_return_if_fail() would be nicer.
Comment 13 Murray Cumming 2016-02-25 12:16:16 UTC
This fixes that issue with the assert in EvinceView:
https://git.gnome.org/browse/glom/commit/?id=eb8c3ab047b86ca7de431c5d5b14f6ab4c257574
and there are some subsequent commits to clean that code up in general.

I'm keeping this bug open because I'm seeing an unrelated crash when repeatedly selecting new images, regardless of the image type.
Comment 14 m.rick.mac 2016-02-25 13:43:52 UTC
Ha I understand now why I had crashed times to times with JPEG pictures that were supposed to work.
Thank you.
Comment 15 Murray Cumming 2016-02-25 13:47:25 UTC
That's fixed now too. I'm now releasing 1.30.x and 1.28.x tarballs and I'll try to update the Ubuntu package.
Comment 16 m.rick.mac 2016-02-25 13:49:07 UTC
These updates will have a lot of corrections!
Thank you for your work.