ImageGlom: Put EvView in ScrolledWindow to avoid crash.

Because recent versions of libevince-view have an assert that crashes
the application:
https://bugzilla.gnome.org/show_bug.cgi?id=761396#c12